fix answer count alignment

--- a/resources/styles/components/task-teacher-review/question.less
+++ b/resources/styles/components/task-teacher-review/question.less
@@ -15,7 +15,9 @@
 
     .selected-count {
       display: inline-block;
-      #fonts > .sans(1.8rem, 2.4rem);
+      width: 60px;
+      #fonts > .sans(1.8rem, 1.8rem);
+      margin-top: 11px;
 
       &::before {
         content: attr(data-count);
